Sat Nov 24 14:18:41 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3769_Regression/Foo_exec.cpp:
	  Fuzz : Trailing whitespaces

Fri Nov 23 12:53:17 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3769_Regression/Foo_exec.cpp:
          Fixed fuzz and test.

        * tests/Bug_3769_Regression/descriptors/DeploymentPlan.cdp:
          Fixed fuzz.

Fri Nov 23 10:56:41 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3769_Regression/Foo_exec.cpp:
          Minor layout change.

        * tests/Bug_3769_Regression/descriptors/DeploymentPlan.cdp:
          Added new attribute.

        * bin/ciao_tests.lst:
        * tests/Bug_3769_Regression/descriptors/run_test_cdr.pl:
          New test: using CDR as input for the plan launcher.

Fri Nov 23 10:28:23 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3769_Regression/Foo.idl:
        * tests/Bug_3769_Regression/Foo_exec.h:
        * tests/Bug_3769_Regression/Foo_exec.cpp:
          Expanded test. Added a struct within a struct which
          is placed in a separate module. checking whether the
          correct values are set.

Mon Nov 19 18:15:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
          Layout changes

        * connectors/dds4ccm/impl/DomainParticipantManager.cpp:
          Check for (un)registration of nil domain participants, log
          profile during unregistration

Mon Nov 12 10:07:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.6 released.

Fri Oct 12 11:18:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Transaction.idl:
          Removed old comment

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Fixed some logging statements
