@@ -115,7 +115,10 @@ module DDS {
         NOT_REJECTED,
         REJECTED_BY_INSTANCES_LIMIT,
         REJECTED_BY_SAMPLES_LIMIT,
-        REJECTED_BY_SAMPLES_PER_INSTANCE_LIMIT
+        REJECTED_BY_SAMPLES_PER_INSTANCE_LIMIT,
+        REJECTED_BY_REMOTE_WRITERS_LIMIT, /* RTI Extension */
+        REJECTED_BY_REMOTE_WRITERS_PER_INSTANCE_LIMIT, /* RTI Extension */
+        REJECTED_BY_SAMPLES_PER_REMOTE_WRITER_LIMIT /* RTI Extension */
     };
 
     struct SampleRejectedStatus {
